gccida/c0/do_compare_rtx_and_jump
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_rtx_and_jump/src/expr.c:10429:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_rtx_and_jump/src/expr.c:10431:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_rtx_and_jump/src/expr.c:10438:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code codea; // [rsp+2Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_rtx_and_jump/src/expr.c:10447:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[mode] != MODE_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_rtx_and_jump/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_rtx_and_jump/src/expr.c:10448:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[mode] != MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_rtx_and_jump/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_rtx_and_jump/src/expr.c:10449:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[mode] != MODE_VECTOR_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_rtx_and_jump/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_rtx_and_jump/src/expr.c:10455:6: error: use of undeclared identifier 'QTextBlock'
if ( QTextBlock::operator<( op0, op1) ) 
     ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_rtx_and_jump/src/obj/expr.o] Error 1
